[gd_scene load_steps=5 format=2]

[ext_resource path="res://Action RPG Resources/UI/ComboBar/ComboBarEmpty.png" type="Texture" id=1]
[ext_resource path="res://Action RPG Resources/UI/ComboBar/ComboBarFull.png" type="Texture" id=2]
[ext_resource path="res://Action RPG Resources/UI/ComboBar/ComboBarProgress.png" type="Texture" id=3]
[ext_resource path="res://Action RPG Resources/UI/ComboBar.gd" type="Script" id=4]

[node name="ComboBar" type="Control"]
margin_left = 311.035
margin_top = 19.457
margin_right = 311.035
margin_bottom = 19.457
rect_rotation = 45.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ComboBarEmpty" type="TextureRect" parent="."]
rect_rotation = 45.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
flip_v = true

[node name="ComboBarProgress" type="TextureRect" parent="."]
margin_left = 33.7435
margin_top = 54.9807
margin_right = 159.744
margin_bottom = 84.9807
rect_rotation = 225.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
expand = true
flip_h = true

[node name="ComboBarFull" type="TextureRect" parent="."]
visible = false
margin_right = 126.0
margin_bottom = 30.0
rect_rotation = 45.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
flip_v = true
